--- a/app/index.html
+++ b/app/index.html
@@ -423,6 +423,7 @@
                 'bower_components/ac-angular-utils/ac-utils.min.js',
                 'bower_components/ac-angular-contacts/ac-contacts.min.js',
                 'bower_components/ac-angular-noticias/ac-noticias.js',
+                'bower_components/angular-sanitize/angular-sanitize.min.js',
                 'https://cdn.firebase.com/js/client/2.2.1/firebase.js'
             ], 'segundo');
 
