--- a/app/contactanos/contacto.html
+++ b/app/contactanos/contacto.html
@@ -1,3 +1,6 @@
+
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion_async.js"></script>
+
 <div ng-controller="ContactoController as contactoCtrl" class="container container-color-3 container-menu-margin">
     <div class="container-info" form-id="contacto">
         <h1 class="color-primary">Cont&aacute;ctanos:</h1>
