Se usa el componente angular-contact para el envio de los mails en vez del mailer

--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -43,6 +43,7 @@
             </div>
             <input id="texto-mensaje" ng-model="chatCtrl.message"
                    ng-keypress="chatCtrl.sendChat($event);" type="text">
+            <div class="chant-info">Por favor, ingrese su consulta</div>
         </div>
 
     </div>
