--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -25,7 +25,7 @@
                 </button>
             </div>
             <div class="send-mail ac-mensaje-custom-show" ng-if="chatCtrl.enviando">
-                En breve se estar· contactando alguien con usted
+                En breve se estar√° contactando alguien con usted
             </div>
         </div>
 
@@ -35,7 +35,7 @@
                     <img src="images/logo.png" width="50px" height="50px">
                 </div>
                 <div>
-                    <div>AtenciÛn al Cliente</div>
+                    <div>Atenci√≥n al Cliente</div>
                     <span>Buenos dias en que podemos ayudarte?...</span>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            <input id="texto-mensaje" ng-model="chatCtrl.message" placeholder="Escriba su mensaje aquÌ..."
+            <input id="texto-mensaje" ng-model="chatCtrl.message" placeholder="Escriba su mensaje aqu√≠..."
                    ng-keypress="chatCtrl.sendChat($event);" type="text">
             <!--div class="chant-info">Por favor, ingrese su consulta</div-->
         </div>
