--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <input id="texto-mensaje" ng-model="chatCtrl.message" placeholder="Escriba su mensaje aquí..."
-                   ng-keypress="chatCtrl.sendChat($event);" type="text">
+                   ng-keypress="chatCtrl.sendChat($event);" type="text" style="padding: 5px 10px;">
             <!--div class="chant-info">Por favor, ingrese su consulta</div-->
         </div>
 
