--- a/app/index.html
+++ b/app/index.html
@@ -424,7 +424,9 @@
                 'bower_components/ac-angular-contacts/ac-contacts.min.js',
                 'bower_components/ac-angular-noticias/ac-noticias.js',
                 'bower_components/angular-sanitize/angular-sanitize.min.js',
-                'https://cdn.firebase.com/js/client/2.2.1/firebase.js'
+                'https://cdn.firebase.com/js/client/2.4.0/firebase.js',
+                'https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js',
+                'ac-angularfire-factory/ac-factory.js'
             ], 'segundo');
 
             $script.ready('segundo', function () {
