--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -32,7 +32,7 @@
         <div class="chat-container" id="" ng-if="chatCtrl.chatIsLogged">
             <div class="chat-header">
                 <div style="margin-right: 10px">
-                    <img src="images/logo.png" width="50px" height="50px">
+                    <img src="images/logo.png" width="60px">
                 </div>
                 <div>
                     <div>Atención al Cliente</div>
