--- a/app/contactanos/contacto.html
+++ b/app/contactanos/contacto.html
@@ -1,4 +1,32 @@
-<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion_async.js"></script>
+<!-- Google Code for Contacto Conversion Page
+In your html page, add the snippet and call
+goog_report_conversion when someone clicks on the
+chosen link or button. -->
+<script type="text/javascript">
+    /* <![CDATA[ */
+    goog_snippet_vars = function() {
+        var w = window;
+        w.google_conversion_id = 956728168;
+        w.google_conversion_label = "_8PjCNaT810Q6IaayAM";
+        w.google_remarketing_only = false;
+    }
+    // DO NOT CHANGE THE CODE BELOW.
+    goog_report_conversion = function(url) {
+        goog_snippet_vars();
+        window.google_conversion_format = "3";
+        var opt = new Object();
+        opt.onload_callback = function() {
+            if (typeof(url) != 'undefined') {
+                window.location = url;
+            }
+        }
+        var conv_handler = window['google_trackConversion'];
+        if (typeof(conv_handler) == 'function') {
+            conv_handler(opt);
+        }
+    }
+    /* ]]> */
+</script>
 
 <div ng-controller="ContactoController as contactoCtrl" class="container container-color-3 container-menu-margin">
     <div class="container-info" form-id="contacto">
@@ -34,7 +62,7 @@
                 </div>
             </div>
             <div class="back-3">
-                <button id="enviar-consulta" ac-validator ng-click="contactoCtrl.sendMail();">
+                <button id="enviar-consulta" ac-validator ng-click="goog_report_conversion();contactoCtrl.sendMail();">
                     <div class="arrow-up position-up"></div> Enviar
                 </button>
             </div>
