--- a/app/main/main.html
+++ b/app/main/main.html
@@ -1,13 +1,33 @@
 <div class="container" ng-controller="MainController as mainCtrl">
-    <div class="">
-        <img class="" src="images/logo.png" height="250" width="350">
+    <div class="logo-container">
+        <img class="logo-size" src="images/logo.png">
+        <p class="texto-main">Bienvenidos a nuestra pagina!</p>
+        <p class="texto-main2">En nuestra página podrás encontrar información sustancial sobre las últimas tendencias en la web, y a su vez podrás contarnos tus dudas, pedirnos cotizaciones, o ayuda en el desarrollo de tus proyectos! no dudes en consultarnos.</p>
+
     </div>
 
-    <div class="">
-        <p class="">
-            wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
-        </p>
-    </div>
+    <!--<div class="menu-principal">-->
+        <!--<ul class="menu-ul">-->
+            <!--<li>-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/mision'});">NUESTRA MISION</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'QUE HACEMOS', path: '/hacemos'});">QUE HACEMOS</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'CONTACTANOS', path: '/contacto'});">CONTACTANOS</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'SABIAS', path: '/sabias'});">SABIAS?</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'NOTICIAS', path: '/noticias'});">NOTICIAS</a>-->
+            <!--</li>-->
+            <!--<li style="border-bottom:0;border-right:0;">-->
+                <!--<a href="" ng-click="appCtrl.goTo({nombre: 'CHATEA CON NOSOTROS', path: '/chat'});">CHATEA CON NOSOTROS!</a>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</div>-->
 
-</div>
+</div>-->
 
