--- a/app/main/main.html
+++ b/app/main/main.html
@@ -3,7 +3,11 @@
         <img class="logo-size" src="images/logo.png">
         <p class="texto-main">Bienvenidos a nuestra pagina!</p>
         <p class="texto-main2">En nuestra página podrás encontrar información sustancial sobre las últimas tendencias en la web, y a su vez podrás contarnos tus dudas, pedirnos cotizaciones, o ayuda en el desarrollo de tus proyectos! no dudes en consultarnos.</p>
-
+        <div class="back-2">
+            <a href="" ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/mision'});">
+                <div class="arrow-left"></div> Comenzar
+            </a>
+        </div>
     </div>
 
     <!--<div class="menu-principal">-->
