--- a/app/noticias/noticias.html
+++ b/app/noticias/noticias.html
@@ -97,8 +97,8 @@
         </div>
 
         <div class="back-2">
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/mision'});">
-                <div class="arrow-left"></div> Volver
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">
+                <div class="arrow-left"></div> Inicio
             </a>
         </div>
 
