--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -63,8 +63,8 @@
 
 
         <div class="back-2">
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/mision'});">
-                <div class="arrow-left"></div> Volver
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Inicio', path: '/main'});">
+                <div class="arrow-left"></div> Inicio
             </a>
         </div>
 
