--- a/app/mision/mision.html
+++ b/app/mision/mision.html
@@ -20,8 +20,8 @@
       </p>
     </div>
     <div class="back-2">
-      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/mision'});">
-        <div class="arrow-left"></div> Volver
+      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">
+        <div class="arrow-left"></div> Inicio
       </a>
     </div>
   </div>
