--- a/app/main/main.html
+++ b/app/main/main.html
@@ -1,11 +1,12 @@
 <div class="container" ng-controller="MainController as mainCtrl">
     <div class="logo-container">
         <img class="logo-size" src="images/logo.png">
-        <p class="texto-main">Bienvenidos a nuestra pagina!</p>
-        <p class="texto-main2">En nuestra página podrás encontrar información sustancial sobre las últimas tendencias en la web, y a su vez podrás contarnos tus dudas, pedirnos cotizaciones, o ayuda en el desarrollo de tus proyectos! no dudes en consultarnos.</p>
+        <p class="texto-main">Bienvenidos a nuestra página!</p>
+        <p class="texto-main2">Aquí podrás encontrar información sustancial sobre las últimas tendencias en la web, y a su vez podrás contarnos tus dudas, pedirnos cotizaciones, o ayuda en el desarrollo de tus proyectos! no dudes en consultarnos.</p>
+        <p class="texto-main3"> www.ac-desarrollos.com - Tel (011) 3111-5006 - ventas@ac-desarrollos.com </p>
         <div class="back-2">
-            <a href="" ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/mision'});">
-                <div class="arrow-left"></div> Comenzar
+            <a class="btn-comenzar" href="" ng-click="appCtrl.goTo({nombre: 'NUESTRA MISION', path: '/mision'});">
+             Comenzar
             </a>
         </div>
     </div>
@@ -33,5 +34,5 @@
         <!--</ul>-->
     <!--</div>-->
 
-</div>-->
+</div>
 
