Adwords y user component para el slider de hacemos.

--- a/app/index.html
+++ b/app/index.html
@@ -420,7 +420,7 @@
                 //'bower_components/angular-cookies/angular-cookies.min.js',
                 'bower_components/angular-animate/angular-animate.min.js',
                 'bower_components/angular-toastr/dist/angular-toastr.min.js',
-                'bower_components/ac-angular-utils/ac-utils.min.js',
+                'bower_components/ac-angular-utils/ac-utils.js',
                 'bower_components/ac-angular-contacts/ac-contacts.min.js',
                 'bower_components/ac-angular-noticias/ac-noticias.js',
                 'bower_components/angular-sanitize/angular-sanitize.min.js',
@@ -460,6 +460,34 @@
 
 </head>
 <body ng-controller="AppController as appCtrl" style="position: relative;">
+<!-- Google Code for Contacto Conversion Page. In your html page, add the snippet and call
+    goog_report_conversion when someone clicks on the chosen link or button. -->
+<script type="text/javascript">
+    /* <![CDATA[ */
+    goog_snippet_vars = function() {
+        var w = window;
+        w.google_conversion_id = 956728168;
+        w.google_conversion_label = "_8PjCNaT810Q6IaayAM";
+        w.google_remarketing_only = false;
+        w.google_conversion_value = 0;
+    }
+    // DO NOT CHANGE THE CODE BELOW.
+    goog_report_conversion = function(url) {
+        goog_snippet_vars();
+        window.google_conversion_format = "3";
+        var opt = new Object();
+        opt.onload_callback = function() {
+            if (typeof(url) != 'undefined') {
+                window.location = url;
+            }
+        }
+        var conv_handler = window['google_trackConversion'];
+        if (typeof(conv_handler) == 'function') {
+            conv_handler(opt);
+        }
+    }
+    /* ]]> */
+</script>
 
 <div ng-if="!appCtrl.hideLoader" id="ac-loader">
     <img src="images/loader-logo.png" alt="" class="loader-img" >
