Slider de hacemos.

--- a/app/index.html
+++ b/app/index.html
@@ -582,7 +582,7 @@
                     </div>
                     <div class="menu-desktop-btn ac-ripple" style="border-right: 2px solid #a1cca5;"
                          ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('QUE HACEMOS') > -1 }"
-                         ng-click="appCtrl.goTo({nombre: 'QUE HACEMOS', path: '/hacemos'});"> QUE HACEMOS
+                         ng-click="appCtrl.goTo({nombre: 'QUE HACEMOS', path: '/hacemos/ecommerce'});"> QUE HACEMOS
                     </div>
                     <div class="menu-desktop-btn ac-ripple" style="border-right: 2px solid #a1cca5;"
                          ng-class="{'menu-desktop-btn-selected':appCtrl.selectedPage.indexOf('CONTACTANOS') > -1 }"
