--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -4,27 +4,66 @@
 
         <div class="slider-container-2">
 
-            <div ng-if="hacemosCtrl.slider_nro == 1" class="slider-container slider-selected">
-                <!--div ng-include="hacemosCtrl.view"></div-->
-                <slider-ecommerce></slider-ecommerce>
+            <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 1}" class="slider-container">
+                <div class="slider-alto">
+                    <div>
+                        <img src="images/comercio.png" alt="" height="80">
+                        <h3 class="color-terciary">Ecommerce, Mcommerce y Comercio Social:</h3>
+                    </div>
+                    <p>El comercio electrónico, también conocido como e-commerce (electronic commerce en inglés), consiste en la compra y venta de productos o de servicios a través de medios electrónicos.</p>
+                    <br>
+                    <p>La mayor parte del comercio electrónico consiste en la compra y venta de productos o servicios entre personas y empresas, sin embargo un porcentaje considerable del comercio electrónico consiste en la adquisición de artículos virtuales (software y derivados en su mayoría), tales como el acceso a contenido "premium" de un sitio web..</p>
+                    <br>
+                    <p>M-Commerce o comercio móvil (del anglicismo Mobile Commerce) toma sus bases del e-commerce, solo que llevando todas las transacciones a nivel de poder ser ejecutadas desde un teléfono móvil u otro dispositivo inalámbrico móvil.</p>
+                    <br>
+                    <p>El comercio social (en inglés: social commerce) es una ramificación del comercio electrónico que supone el uso de redes sociales para ayudar en la compra y venta en línea de productos y servicios.</p>
+                    <br>
+                    <p>El término comercio social fue acuñado por Yahoo! en noviembre de 20051 para describir un conjunto de herramientas de compra colaborativa tales como listas compartidas, valoraciones de usuarios y otro tipo de información y consejos generados por usuarios.</p>
+                </div>
             </div>
-            <div ng-if="hacemosCtrl.slider_nro == 2" class="slider-container slider-selected">
-                <slider-institucional></slider-institucional>
+            <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 2}" class="slider-container">
+                <div class="slider-alto">
+                    <img src="images/institucional.png" alt="" height="80">
+
+                    <h3 class="color-primary">Institucionales:</h3>
+                    <p>Los sitios web institucionales están desarrollados para brindar al usuario información concisa sobre los datos de la empresa, a lo que se dedica y las formas de contacto.</p>
+                    <br>
+                    <p>Están pensadas para que ofrezcan una experienca rápida y amena que permita facilitar todos los medios de contacto posibles hacia la empresa, ya sea a través de mapas, números de teléfono o formularios de contacto.</p>
+                    <br>
+                    <p>En estas páginas web se muestra solo un resumen de los servicios o productos ofrecidos por la empresa.</p>
+                </div>
             </div>
-            <div ng-if="hacemosCtrl.slider_nro == 3" class="slider-container slider-selected">
-                <slider-sistema></slider-sistema>
+            <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 3}" class="slider-container">
+                <div class="slider-alto">
+                    <img src="images/gestion.png" alt="" height="80">
+                    <h3 class="color-terciary">Sistemas de gestión:</h3>
+                    <p>Un sistema robusto y completo que permite realizar la gestión de ventas, stock, clientes y movimientos contables. Un sistema en evolución constante que crece de acuerdo a las necesidades de nuestros clientes.</p>
+                </div>
             </div>
-            <div ng-if="hacemosCtrl.slider_nro == 4" class="slider-container slider-selected">
-                <slider-desarrollo></slider-desarrollo>
+            <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 4}" class="slider-container">
+                <div class="slider-alto">
+                    <img src="images/desarrollos.png" alt="" height="80">
+                    <h3 class="color-primary">Desarrollos a medida:</h3>
+                    <p>Si tenés una idea, nosotros te damos un plan para implementarla de una forma seria y aplicando todas las nuevas tecnologias del mercado.</p>
+                    <br>
+                    <p>No importa como sea tu negocio, siempre podés contar con nosotros para poder llevar a cabo tu proyecto.</p>
+                    <br>
+                    <p>Todos nuestros diseños y desarrollos estan pensados de acuerdo a las necesidades y el negocio de nuestro cliente, cada página es una experiencia única e irrepetible.</p>
+                </div>
             </div>
-            <div ng-if="hacemosCtrl.slider_nro == 5" class="slider-container slider-selected">
-                <slider-analitica></slider-analitica>
+            <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 5}" class="slider-container">
+                <div class="slider-alto">
+                    <img src="images/analiticas.png" alt="" height="80">
+
+                    <h3 class="color-terciary">Analiticas:</h3>
+                    <p>Te ofrecemos las mejores herramientas para que puedas ver que está pasando en tu sitio, las páginas más visitadas, los países, los idiomas, los gustos de tus usuarios y mucho más.</p>
+                </div>
             </div>
         </div>
 
 
         <div class="back-2">
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Inicio', path: '/main'});">
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/mision'});">
                 <div class="arrow-left"></div> Inicio
             </a>
         </div>
@@ -43,4 +82,3 @@
         </div>
     </div>
 </div>
-
