--- a/app/index.html
+++ b/app/index.html
@@ -419,7 +419,7 @@
                 //'bower_components/angular-cookies/angular-cookies.min.js',
                 'bower_components/angular-animate/angular-animate.min.js',
                 'bower_components/angular-toastr/dist/angular-toastr.min.js',
-                'bower_components/ac-angular-utils/ac-utils.js',
+                'bower_components/ac-angular-utils/ac-utils.min.js',
                 'bower_components/ac-angular-contacts/ac-contacts.min.js',
                 'bower_components/ac-angular-noticias/ac-noticias.js',
                 'bower_components/angular-sanitize/angular-sanitize.min.js',
@@ -444,7 +444,7 @@
         var cb = function () {
             var l = document.createElement('link');
             l.rel = 'stylesheet';
-            l.href = 'stylesheets/screen.css';
+            l.href = 'stylesheets/screen.min.css';
             var h = document.getElementsByTagName('head')[0];
             h.parentNode.insertBefore(l, h);
         };
